Fixed alignment of left edge of jqplots

--- a/simulations/simulations.css
+++ b/simulations/simulations.css
@@ -65,3 +65,7 @@ body
     margin-top: 1ex;
     margin-bottom: 1ex;
 }
+
+.jqplot-yaxis {
+    margin-left: -80px;
+}
